Downloaded sample datasets

--- a/lasso_factorial_selection/real_world.ipynb
+++ b/lasso_factorial_selection/real_world.ipynb
@@ -24,6 +24,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import rpy2.robjects as robjects\n",
     "from rpy2.robjects import pandas2ri\n",
@@ -45,10 +46,356 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = pd.read_stata('data/AER merged.dta')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>treatment</th>\n",
+       "      <th>control</th>\n",
+       "      <th>ratio</th>\n",
+       "      <th>ratio2</th>\n",
+       "      <th>ratio3</th>\n",
+       "      <th>size</th>\n",
+       "      <th>size25</th>\n",
+       "      <th>size50</th>\n",
+       "      <th>size100</th>\n",
+       "      <th>sizeno</th>\n",
+       "      <th>...</th>\n",
+       "      <th>redcty</th>\n",
+       "      <th>bluecty</th>\n",
+       "      <th>pwhite</th>\n",
+       "      <th>pblack</th>\n",
+       "      <th>page18_39</th>\n",
+       "      <th>ave_hh_sz</th>\n",
+       "      <th>median_hhincome</th>\n",
+       "      <th>powner</th>\n",
+       "      <th>psch_atlstba</th>\n",
+       "      <th>pop_propurban</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Control</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Control</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.446493</td>\n",
+       "      <td>0.527769</td>\n",
+       "      <td>0.317591</td>\n",
+       "      <td>2.10</td>\n",
+       "      <td>28517.0</td>\n",
+       "      <td>0.499807</td>\n",
+       "      <td>0.324528</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Control</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Control</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>$100,000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.935706</td>\n",
+       "      <td>0.011948</td>\n",
+       "      <td>0.276128</td>\n",
+       "      <td>2.48</td>\n",
+       "      <td>51175.0</td>\n",
+       "      <td>0.721941</td>\n",
+       "      <td>0.192668</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Unstated</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.888331</td>\n",
+       "      <td>0.010760</td>\n",
+       "      <td>0.279412</td>\n",
+       "      <td>2.65</td>\n",
+       "      <td>79269.0</td>\n",
+       "      <td>0.920431</td>\n",
+       "      <td>0.412142</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>$50,000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.759014</td>\n",
+       "      <td>0.127421</td>\n",
+       "      <td>0.442389</td>\n",
+       "      <td>1.85</td>\n",
+       "      <td>40908.0</td>\n",
+       "      <td>0.416072</td>\n",
+       "      <td>0.439965</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Control</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Control</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.862053</td>\n",
+       "      <td>0.071572</td>\n",
+       "      <td>0.363239</td>\n",
+       "      <td>2.92</td>\n",
+       "      <td>61779.0</td>\n",
+       "      <td>0.941339</td>\n",
+       "      <td>0.200840</td>\n",
+       "      <td>0.962345</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>$25,000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.882912</td>\n",
+       "      <td>0.097408</td>\n",
+       "      <td>0.376446</td>\n",
+       "      <td>2.10</td>\n",
+       "      <td>54655.0</td>\n",
+       "      <td>0.695880</td>\n",
+       "      <td>0.554568</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>$100,000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.903297</td>\n",
+       "      <td>0.019494</td>\n",
+       "      <td>0.212040</td>\n",
+       "      <td>2.47</td>\n",
+       "      <td>141527.0</td>\n",
+       "      <td>0.897906</td>\n",
+       "      <td>0.708122</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Unstated</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.927851</td>\n",
+       "      <td>0.004739</td>\n",
+       "      <td>0.249465</td>\n",
+       "      <td>2.49</td>\n",
+       "      <td>37017.0</td>\n",
+       "      <td>0.763151</td>\n",
+       "      <td>0.205828</td>\n",
+       "      <td>0.599052</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>$25,000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10 rows × 51 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   treatment  control    ratio  ratio2  ratio3      size  size25  size50  \\\n",
+       "0          0        1  Control       0       0   Control       0       0   \n",
+       "1          0        1  Control       0       0   Control       0       0   \n",
+       "2          1        0        1       0       0  $100,000       0       0   \n",
+       "3          1        0        1       0       0  Unstated       0       0   \n",
+       "4          1        0        1       0       0   $50,000       0       1   \n",
+       "5          0        1  Control       0       0   Control       0       0   \n",
+       "6          1        0        1       0       0   $25,000       1       0   \n",
+       "7          1        0        2       1       0  $100,000       0       0   \n",
+       "8          1        0        2       1       0  Unstated       0       0   \n",
+       "9          1        0        1       0       0   $25,000       1       0   \n",
+       "\n",
+       "   size100  sizeno  ... redcty  bluecty    pwhite    pblack  page18_39  \\\n",
+       "0        0       0  ...    0.0      1.0  0.446493  0.527769   0.317591   \n",
+       "1        0       0  ...    1.0      0.0       NaN       NaN        NaN   \n",
+       "2        1       0  ...    0.0      1.0  0.935706  0.011948   0.276128   \n",
+       "3        0       1  ...    1.0      0.0  0.888331  0.010760   0.279412   \n",
+       "4        0       0  ...    0.0      1.0  0.759014  0.127421   0.442389   \n",
+       "5        0       0  ...    1.0      0.0  0.862053  0.071572   0.363239   \n",
+       "6        0       0  ...    1.0      0.0  0.882912  0.097408   0.376446   \n",
+       "7        1       0  ...    0.0      1.0  0.903297  0.019494   0.212040   \n",
+       "8        0       1  ...    1.0      0.0  0.927851  0.004739   0.249465   \n",
+       "9        0       0  ...    0.0      1.0       NaN       NaN        NaN   \n",
+       "\n",
+       "   ave_hh_sz  median_hhincome    powner  psch_atlstba  pop_propurban  \n",
+       "0       2.10          28517.0  0.499807      0.324528       1.000000  \n",
+       "1        NaN              NaN       NaN           NaN            NaN  \n",
+       "2       2.48          51175.0  0.721941      0.192668       1.000000  \n",
+       "3       2.65          79269.0  0.920431      0.412142       1.000000  \n",
+       "4       1.85          40908.0  0.416072      0.439965       1.000000  \n",
+       "5       2.92          61779.0  0.941339      0.200840       0.962345  \n",
+       "6       2.10          54655.0  0.695880      0.554568       1.000000  \n",
+       "7       2.47         141527.0  0.897906      0.708122       1.000000  \n",
+       "8       2.49          37017.0  0.763151      0.205828       0.599052  \n",
+       "9        NaN              NaN       NaN           NaN            NaN  \n",
+       "\n",
+       "[10 rows x 51 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head(10)"
+   ]
   },
   {
    "cell_type": "markdown",
