Added beta labels for plots

--- a/lasso_factorial_selection/real_world.ipynb
+++ b/lasso_factorial_selection/real_world.ipynb
@@ -41,7 +41,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Charitable Giving"
+    "### Charitable Giving (Karlan 2007)"
    ]
   },
   {
