Revised real world data notebook

--- a/lasso_factorial_selection/real_world.ipynb
+++ b/lasso_factorial_selection/real_world.ipynb
@@ -41,6 +41,111 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Advertising Content (Bertrand 2008)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the data into a pandas dataframe\n",
+    "df = pd.read_stata('data/adcontentworth_qje.dta')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "nspeakeligible\n",
+       "no     29891\n",
+       "yes    23303\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['nspeakeligible'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5619242771741174"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "29891/(29891+23303)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['wave', 'dormancy', 'race', 'risk', 'offer4', 'prize', 'intshown',\n",
+       "       'trcount', 'tookup', 'applied', 'badacct_last', 'female', 'edhi',\n",
+       "       'waved3', 'dphoto_female', 'dphoto_none', 'dphoto_black',\n",
+       "       'gender_match', 'race_match', 'nspeakeligible', 'speak_trt',\n",
+       "       'oneln_trt', 'comploss_n', 'use_any', 'deadlinemed', 'deadlinelong',\n",
+       "       'deadlong_elig', 'deadshort_elig', 'amountbrw_unc',\n",
+       "       'tookup_outside_only', 'deadlineshortext', 'tookup_after_short',\n",
+       "       'applied_2weeks', 'tookup_after_med', 'tookup_after_long', 'stripany',\n",
+       "       'comp_n'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Features:\n",
+    "1. no photo ('dphoto_none')\n",
+    "2. female photo ('dphoto_female')\n",
+    "3. photo gender matches client's ('gender_match')\n",
+    "4. black photo ('dphoto_black')\n",
+    "5. photo race matches borrower's ('race_match')\n",
+    "6. we speak (your language)\n",
+    "7. a 'low' or 'special' rate for you\n",
+    "8. no specific loan use mentioned\n",
+    "9. one example loan\n",
+    "10. interest rate shown\n",
+    "11. no comparison to competitor rate\n",
+    "12. gain frame comparison to competitor rate\n",
+    "13. cell phone raffle mentioned\n",
+    "\"\"\"\n",
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Charitable Giving (Karlan 2007)"
    ]
   },
